--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de IMC</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <main class="calculator">
+        <header class="calculator__header">
+            <h1 class="calculator__title">Calculadora de IMC</h1>
+        </header>
+<!-- --------------------------------------------------------------------------------- -->
+        <section class="calculator__form-section">
+            <form action="" class="calculator__form" id="imcForm">
+                <div class="calculator__form-group">
+                    <label for="weight" class="calculator__label"></label>
+                    <input type="number" class="calculator__input" id="weight" placeholder="Ex.: 70" required>
+                </div>
+                <!-- --------------------------------------------------------------------------------- -->
+                <div class="calculator__form-group">
+                    <label for="height" class="calculator__label"></label>
+                    <input type="number" class="calculator__input" id="height" placeholder="Ex.: 1.70" step="0.01" required>
+                </div>
+                <!-- --------------------------------------------------------------------------------- -->
+                <div class="calculator__buttons">
+                    <button type="button" class="calculator__button calculator__button--calculate" onclick="calcularIMC()">Calcular</button>
+                    <button type="button" class="calculator__button calculator__button--clear" onclick="limparCampos()">Limpar</button>
+                </div>
+            </form>
+        </section>
+<!-- --------------------------------------------------------------------------------- -->
+        <section class="calculator__result-section" id="resultSection">
+
+        </section>
+    </main>
+
+    <script src="./calculo-imc.js"></script>
 </body>
 </html>
