Arquivos 1 e 2 de js completo

--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
         </section>
     </main>
 
-    <script src="./calculo-imc.js"></script>
+    <script src="./calculo-imc-v2.js"></script>
 </body>
 </html>
