Refatoração do código

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </section>
 <!-- --------------------------------------------------------------------------------- -->
         <section class="calculator__result-section" id="resultSection">
-
+            <h2 class="calculator__result-title">Resultado:</h2>
+            <p class="calculator__result-title" id="resultText">Preencha os campos e clique em "Calcular".</p>
         </section>
     </main>
 
