--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
         <section class="calculator__form-section">
             <form action="" class="calculator__form" id="imcForm">
                 <div class="calculator__form-group">
-                    <label for="weight" class="calculator__label"></label>
+                    <label for="weight" class="calculator__label">Peso(Kg): </label>
                     <input type="number" class="calculator__input" id="weight" placeholder="Ex.: 70" required>
                 </div>
                 <!-- --------------------------------------------------------------------------------- -->
                 <div class="calculator__form-group">
-                    <label for="height" class="calculator__label"></label>
+                    <label for="height" class="calculator__label">Altura(m): </label>
                     <input type="number" class="calculator__input" id="height" placeholder="Ex.: 1.70" step="0.01" required>
                 </div>
                 <!-- --------------------------------------------------------------------------------- -->
                 <div class="calculator__buttons">
                     <button type="button" class="calculator__button calculator__button--calculate" onclick="calcularIMC()">Calcular</button>
-                    <button type="button" class="calculator__button calculator__button--clear" onclick="limparCampos()">Limpar</button>
                 </div>
             </form>
         </section>
@@ -34,6 +33,9 @@
         <section class="calculator__result-section" id="resultSection">
             <h2 class="calculator__result-title">Resultado:</h2>
             <p class="calculator__result-title" id="resultText">Preencha os campos e clique em "Calcular".</p>
+            <div class="calculator__buttons">
+                <button type="button" class="calculator__button calculator__button--clear" onclick="limparCampos()">Limpar</button>
+            </div>
         </section>
     </main>
 
